# Copyright (c) 2014 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../webrtc.gni")

if (is_android) {
  import("//build/config/android/config.gni")
  import("//build/config/android/rules.gni")
}

config("backing_track_include_config") {
  include_dirs = [
    "//sdk/libs/ffmpeg/include",
  ]
}

rtc_source_set("backing_track") {
  visibility = [ "*" ]
  sources = [
    "audio_file_decoder.h",
    "audio_file_decoder.cc",
    "audio_mixer_global.h",
    "audio_resampler.h",
    "audio_resampler.cc",
    "audio_source_compressed.h",
    "audio_source_compressed.cc",
    "audio_source_pcm.h",
    "audio_source_pcm.cc",
    "audio_source.h",
    "audio_source.cc",
    "avx_helper.h",
    "bt_audio_mixer.h",
    "bt_audio_mixer.cc",
    "mixer_config.h",
    "mixer_source.h",
    "mixer_source.cc",
    "pcm_channel.h",
    "pcm_channel.cc",
  ]
  deps = [
    "../../rtc_base:checks",
    "../audio_device:audio_device_buffer",
    "../audio_mixer:audio_mixer_impl",
  ]

  public_configs = [
    ":backing_track_include_config"
  ]
}
