# Copyright (c) 2014 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../webrtc.gni")

if (is_android) {
  import("//build/config/android/config.gni")
  import("//build/config/android/rules.gni")
}

config("recording_include_config") {
  include_dirs = [
    "//sdk/libs/ffmpeg/include",
  ]
}

rtc_source_set("recording") {
  visibility = [ "*" ]
  sources = [
    "recorder.h",
    "recorder.cc",
  ]
  deps = [
  ]

  public_configs = [
    ":recording_include_config"
  ]
}
