# Copyright (c) 2014 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../webrtc.gni")

if (is_android) {
  import("//build/config/android/config.gni")
  import("//build/config/android/rules.gni")
}

rtc_source_set("recording") {
  visibility = [ "*" ]
  sources = [
    "recorder.h",
    "recorder.cc",
  ]
  deps = [
  ]

  public_configs = [
    "//third_party/ffmpeg:ffmpeg_dependent_config",
  ]
}
