# Copyright (c) 2018 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../webrtc.gni")

rtc_static_library("alr_experiment") {
  sources = [
    "alr_experiment.cc",
    "alr_experiment.h",
  ]
  deps = [
    "../:rtc_base_approved",
    "../../api:optional",
    "../../system_wrappers:field_trial_api",
  ]
}

rtc_static_library("congestion_controller_experiment") {
  sources = [
    "congestion_controller_experiment.cc",
    "congestion_controller_experiment.h",
  ]
  deps = [
    "../:rtc_base_approved",
    "../../api:optional",
    "../../system_wrappers:field_trial_api",
  ]
}

if (rtc_include_tests) {
  rtc_source_set("experiments_unittests") {
    testonly = true

    sources = [
      "congestion_controller_experiment_unittest.cc",
    ]
    deps = [
      ":congestion_controller_experiment",
      "../:rtc_base_tests_main",
      "../:rtc_base_tests_utils",
      "../../test:field_trial",
    ]
  }
}
